<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="5dp"
    android:elevation="15dp"
    app:cardCornerRadius="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_item_photo"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/avatars"
            android:contentDescription="@string/image_story" />

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/author"
            android:fontFamily="@font/poppinssemibold"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_item_lat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/poppinsregular"
            android:textSize="12sp"
            android:text="@string/latitude"/>

        <TextView
            android:id="@+id/tv_item_lon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/poppinsregular"
            android:textSize="12sp"
            android:text="@string/longitude"/>

        <TextView
            android:id="@+id/tv_item_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/poppinsregular"
            android:textSize="14sp"
            android:maxLines="1"
            android:text="@string/desc_story" />
    </LinearLayout>
</androidx.cardview.widget.CardView>